# character_controller_experiments

./: Cargo.toml
assets/: playground.map
assets/environment_maps/: license.md
src/: camera.rs  debug.rs  main.rs  props.rs  user_input.rs
src/character_controller/: custom.rs  fixed_update_util.rs  input.rs  mod.rs  movement.rs  quake_1.rs  quake_3.rs  readonly_spatial_query.rs
