[package]
name = "character_controller_experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.4.1"
bevy = "0.17.2"
bevy_enhanced_input = "0.19.3"
bevy_transform_interpolation = "0.3.0"
bevy_trenchbroom = "0.10.0"
bevy_trenchbroom_avian = "0.10.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
